trying to fix jumping animaton on safari...

--- a/css/main.css
+++ b/css/main.css
@@ -53,14 +53,12 @@ div#home {
   top: 40px;
 }
 
+/* TRANSITION */
 /* #d1, #d2, #d3, #d4{
-  /* TRANSITION on div with pictures */
-  /* -webkit-perspective: 1000;
-  -webkit-backface-visibility: hidden; */
-   /* -webkit-transition: background-image 1s ease-in-out;
-   -moz-transition: background-image 1s ease-in-out;
-   -o-transition: background-image 1s ease-in-out;
-   transition: background-image 1s ease-in-out; */
+   -webkit-transition: background-image 1s linear;
+   -moz-transition: background-image 1s linear;
+   -o-transition: background-image 1s linear;
+   transition: background-image 1s linear;
 } */
 
 #d1{
@@ -69,7 +67,7 @@ div#home {
   box-shadow: 0px 0px 25px rgba(0,0,0,.5);
   position: absolute;
   top: 150px;
-  left: 5px;
+  left: 1px;
   background-size: 1150px 650px;
   background-position: 0px -180px;
   z-index: 2;
@@ -114,7 +112,7 @@ div#home {
   letter-spacing: 5px;
   color: #777777;
   position: absolute;
-  left: 930px;
+  right: -370px;
   top: 200px;
   z-index: -1;
 }
